Fix svg overflow on point style classification

--- a/bundles/mapping/mapmodule/resources/scss/mapmodule_ol3.scss
+++ b/bundles/mapping/mapmodule/resources/scss/mapmodule_ol3.scss
@@ -181,11 +181,11 @@ div.mapplugins {
                 }
                 &.statsgrid-legend-plugin {
                     position: absolute;
-                    left: -300px;
+                    left: -305px;
                 }
                 &.statsgrid-series-control-plugin {
                     position: absolute;
-                    left: -810px;
+                    left: -815px;
                 }
 
             }
