--- a/bundles/statistics/statsgrid2016/resources/scss/style.scss
+++ b/bundles/statistics/statsgrid2016/resources/scss/style.scss
@@ -754,6 +754,7 @@ div.oskari-flyout {
     .statsgrid-svg-legend {
         margin: 0 auto;
         width:50%;
+        overflow: hidden;
     }
     .statsgrid-range {
         float: left;
